# minsk_c

./: CMakeLists.txt  CMakePresets.json  README.md
doc/: Doxyfile
include/graver/lib/: graver_double_list.h  graver_lib.h
src/app/: CMakeLists.txt  main.c
src/lib/: CMakeLists.txt  graver_double_list.c
